<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelBuddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen">Splash screen</string>
    <string name="loading">Loading&#8230;&#8230;</string>
    <string name="welcome">Welcome to Travel Buddy</string>
    <string name="login_ask">Please login</string>
    <string name="username_label">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="places_title">Top Places</string>
    <string name="or_register"><u>Or Register</u></string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_logout">Logout</string>
    <string name="top_places">Top places</string>
    <string name="visited">Visited</string>
    <string name="travels">Travels</string>
    <string name="top">Top</string>
    <string name="add">Add</string>
    <string name="add_new">Add new</string>
    <string name="main_activity_welcome">Welcome to your travel buddy</string>
    <string name="places">Places</string>
    <string name="or_login"><u>Or login</u></string>
    <string name="all">All</string>
    <string name="start_trip">Start your new trip</string>
    <string name="trip_name">Trip name</string>
    <string name="trips">Trips</string>
    <string name="trip_description">Trip description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="pernik">Pernik</string>
    <string name="telerik">Telerik Academy</string>
    <string name="title_activity_place_detail">Place Details</string>
    <string name="place_details_title">Place details</string>
    <string name="favourites">Favourites</string>
    <string name="main_menu">Main menu</string>
    <string name="create_place_title">Add a new place</string>
    <string name="place_name">Place Title</string>
    <string name="place_description">Description</string>
    <string name="country">Country</string>
    <string name="title_activity_travels">My travels</string>
    <string name="title_activity_ddddddd">DDDDDDD</string>
	<string name="map">Map</string>
	<string name="take_photo">Take Photo</string>
	<string name="add_photo">"Take a  photo "</string>
	<string name="take_photo_title">Take new photo</string>
	<string name="taken_photo">Taken photo</string>
	<string name="save_photo">Save photo</string>
</resources>