<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_place_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/create_place_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btn_cancel_create_place"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_create_place"
        android:layout_alignBottom="@+id/btn_create_place"
        android:layout_alignRight="@+id/tv_place_title"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/et_place_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/et_country_input"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_place_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_create_place"
        android:layout_alignRight="@+id/btn_cancel_create_place"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:height="60dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_create_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_place_description"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:text="@string/create" />

    <EditText
        android:id="@+id/et_country_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/et_place_description"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_place_description"
        android:layout_toLeftOf="@+id/btn_cancel_create_place"
        android:text="@string/place_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_country_input"
        android:layout_marginBottom="15dp"
        android:layout_toLeftOf="@+id/btn_cancel_create_place"
        android:text="@string/country"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_place_title_input"
        android:layout_centerHorizontal="true"
        android:text="@string/place_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
