<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_place_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/start_trip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/et_trip_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_create_trip"
        android:layout_alignLeft="@+id/et_trip_title_input"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:height="60dp"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_trip_description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/trip_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_trip_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_trip_title_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/trip_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_cancel_create_trip"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_create_trip"
        android:layout_alignBottom="@+id/btn_create_trip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="36dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btn_create_trip"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="25dp"
        android:layout_toLeftOf="@+id/btn_cancel_create_trip"
        android:text="@string/create" />

</RelativeLayout>
