<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        style="@style/button_style"
        android:text="@string/register" />

    <EditText
        android:id="@+id/et_confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_confirm_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_confirm_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_confirm_password_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_register_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_register_pass_label"
        android:layout_alignRight="@+id/et_register_password"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_register_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_below="@+id/tv_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or_login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>